@@ -4,6 +4,9 @@ Revision history for Hailo
 
     - Word tokenizer: Recognize "´" as an apostrophe when matching words.
 
+    - hailo command: Fix off-by-one error when reporting the number of lines
+      learned.
+
 0.52 2010-07-18 22:40:02
 
     - Hailo no longer passes references to itself to its slave
